<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="@dimen/description_padding"
    >

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/img_login_logo_pa"
        android:layout_gravity="center"
        />

    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <EditText
            android:id="@+id/nameField"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/prompt_name"
            android:imeActionId="@+id/login"
            android:imeActionLabel="@string/action_sign_in_short"
            android:imeOptions="actionUnspecified"
            android:inputType="text"
            android:maxLines="1"
            android:singleLine="true" />

    </android.support.design.widget.TextInputLayout>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:id="@+id/pick_addres_text"
        android:layout_gravity="center_horizontal" />

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/pick_address"
        android:id="@+id/pick_address_button"
        android:background="@color/colorPrimary"
        android:layout_margin="@dimen/activity_horizontal_margin"
        android:layout_marginTop="20dp" />

    <Button android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/sign_up_button"
        android:text="@string/action_sign_up"
        android:background="@color/colorPrimaryDark"
        android:layout_margin="@dimen/activity_horizontal_margin"
        android:layout_marginTop="20dp"/>
</LinearLayout>