<?xml version="1.0" encoding="utf-8"?>
<FrameLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#AA000000"
    android:clickable="true"
    >

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="32dp"
        android:layout_gravity="center"
        android:padding="12dp"
        android:orientation="vertical"
        android:background="@drawable/cancel_donation_background"
        >

        <LinearLayout
            android:layout_width="wrap_content"
            android:orientation="vertical"
            android:padding="@dimen/description_padding"
            android:background="@drawable/border_bottom"
            android:layout_height="wrap_content">

            <ImageView
                android:layout_width="80dp"
                android:layout_height="80dp"
                android:src="@drawable/ic_caution"
                android:layout_gravity="center_horizontal"
                />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_margin="@dimen/activity_horizontal_margin"
                android:text="@string/repost_information"
                android:textSize="16dp"
                android:gravity="center"
                android:textAllCaps="true"
                />

        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/description_padding"
            android:layout_marginBottom="@dimen/description_padding"
            android:orientation="horizontal">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:src="@drawable/img_donation_time"/>

            <TextView
                android:id="@+id/time"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/description_padding"
                android:layout_gravity="center_horizontal"
                android:gravity="center"
                android:text="Time"
                android:textSize="16sp"
                android:textColor="@color/gray"
                />

        </LinearLayout>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/description"
            android:textAppearance="@style/TextAppearance.AppCompat.Large"/>
        <TextView
            android:id="@+id/description"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Lorem ipsum dolorem"/>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp"
            android:padding="@dimen/description_padding"
            android:gravity="center"
            android:background="@drawable/border_top"
            android:orientation="horizontal"
            >

            <TextView
                android:id="@+id/go_back"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginRight="16dp"
                android:padding="8dp"
                android:text="@string/delete"
                android:textSize="18sp"
                android:textColor="@color/gray"
                android:textAllCaps="true"
                />

            <TextView
                android:id="@+id/cancel_donation"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:padding="8dp"
                android:textSize="18sp"
                android:text="@string/repost"
                android:textColor="@color/colorPrimary"
                android:textAllCaps="true"
                />

        </LinearLayout>

    </LinearLayout>

</FrameLayout>